Antlr/grammar/.antlr/CricketParser.java
// Generated from c:\School_3rdyr\Gradwork\Project\Compiler\Antlr\grammar\Cricket.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CricketParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, WS=5, TReturn=6, Const=7, Number=8, CharLiteral=9, 
		TInt=10, TChar=11, TVoid=12, LessThan=13, GreaterThan=14, BitwiseAnd=15, 
		BitwiseOr=16, BitwiseXor=17, Equal=18, NotEqual=19, LessOrEqual=20, GreaterOrEqual=21, 
		Assign=22, Colon=23, StatementSeparator=24, Plus=25, Minus=26, Mul=27, 
		Div=28, Mod=29, PlusEqual=30, MinusEqual=31, MulEqual=32, DivEqual=33, 
		OpenPar=34, ClosePar=35, OpenCurly=36, CloseCurly=37, ExclamationMark=38, 
		Comma=39, Identifier=40, Comment=41, IncludeDirective=42, Newline=43;
	public static final int
		RULE_start = 0, RULE_vartype = 1, RULE_beginBlock = 2, RULE_endBlock = 3, 
		RULE_prog = 4, RULE_funcDeclr = 5, RULE_mainDeclrHeader = 6, RULE_mainDeclr = 7, 
		RULE_body = 8, RULE_expr = 9, RULE_primaryExpr = 10, RULE_assign = 11, 
		RULE_ifStatement = 12, RULE_elseStatement = 13, RULE_whileStatement = 14, 
		RULE_declr = 15, RULE_varDeclr = 16, RULE_varDeclrAndAssign = 17, RULE_flowControl = 18;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "vartype", "beginBlock", "endBlock", "prog", "funcDeclr", "mainDeclrHeader", 
			"mainDeclr", "body", "expr", "primaryExpr", "assign", "ifStatement", 
			"elseStatement", "whileStatement", "declr", "varDeclr", "varDeclrAndAssign", 
			"flowControl"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'main'", "'if'", "'else'", "'while'", null, "'return'", null, 
			null, null, "'int'", "'char'", "'void'", "'<'", "'>'", "'&'", "'|'", 
			"'^'", "'=='", "'!='", "'<='", "'>='", "'='", "':'", "';'", "'+'", "'-'", 
			"'*'", "'/'", "'%'", "'+='", "'-='", "'*='", "'/='", "'('", "')'", "'{'", 
			"'}'", "'!'", "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, "WS", "TReturn", "Const", "Number", "CharLiteral", 
			"TInt", "TChar", "TVoid", "LessThan", "GreaterThan", "BitwiseAnd", "BitwiseOr", 
			"BitwiseXor", "Equal", "NotEqual", "LessOrEqual", "GreaterOrEqual", "Assign", 
			"Colon", "StatementSeparator", "Plus", "Minus", "Mul", "Div", "Mod", 
			"PlusEqual", "MinusEqual", "MulEqual", "DivEqual", "OpenPar", "ClosePar", 
			"OpenCurly", "CloseCurly", "ExclamationMark", "Comma", "Identifier", 
			"Comment", "IncludeDirective", "Newline"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Cricket.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CricketParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public ProgContext prog() {
			return getRuleContext(ProgContext.class,0);
		}
		public TerminalNode EOF() { return getToken(CricketParser.EOF, 0); }
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			prog();
			setState(39);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VartypeContext extends ParserRuleContext {
		public TerminalNode TInt() { return getToken(CricketParser.TInt, 0); }
		public TerminalNode TChar() { return getToken(CricketParser.TChar, 0); }
		public VartypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vartype; }
	}

	public final VartypeContext vartype() throws RecognitionException {
		VartypeContext _localctx = new VartypeContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_vartype);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(41);
			_la = _input.LA(1);
			if ( !(_la==TInt || _la==TChar) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BeginBlockContext extends ParserRuleContext {
		public TerminalNode OpenCurly() { return getToken(CricketParser.OpenCurly, 0); }
		public BeginBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_beginBlock; }
	}

	public final BeginBlockContext beginBlock() throws RecognitionException {
		BeginBlockContext _localctx = new BeginBlockContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_beginBlock);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(43);
			match(OpenCurly);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EndBlockContext extends ParserRuleContext {
		public TerminalNode CloseCurly() { return getToken(CricketParser.CloseCurly, 0); }
		public EndBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_endBlock; }
	}

	public final EndBlockContext endBlock() throws RecognitionException {
		EndBlockContext _localctx = new EndBlockContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_endBlock);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(45);
			match(CloseCurly);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgContext extends ParserRuleContext {
		public MainDeclrContext mainDeclr() {
			return getRuleContext(MainDeclrContext.class,0);
		}
		public List<FuncDeclrContext> funcDeclr() {
			return getRuleContexts(FuncDeclrContext.class);
		}
		public FuncDeclrContext funcDeclr(int i) {
			return getRuleContext(FuncDeclrContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_prog);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(47);
					funcDeclr();
					}
					} 
				}
				setState(52);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(53);
			mainDeclr();
			setState(57);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TInt) | (1L << TChar) | (1L << TVoid))) != 0)) {
				{
				{
				setState(54);
				funcDeclr();
				}
				}
				setState(59);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncDeclrContext extends ParserRuleContext {
		public Token FTYPE;
		public List<TerminalNode> Identifier() { return getTokens(CricketParser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(CricketParser.Identifier, i);
		}
		public TerminalNode OpenPar() { return getToken(CricketParser.OpenPar, 0); }
		public TerminalNode ClosePar() { return getToken(CricketParser.ClosePar, 0); }
		public BeginBlockContext beginBlock() {
			return getRuleContext(BeginBlockContext.class,0);
		}
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public EndBlockContext endBlock() {
			return getRuleContext(EndBlockContext.class,0);
		}
		public List<TerminalNode> TVoid() { return getTokens(CricketParser.TVoid); }
		public TerminalNode TVoid(int i) {
			return getToken(CricketParser.TVoid, i);
		}
		public TerminalNode TInt() { return getToken(CricketParser.TInt, 0); }
		public TerminalNode TChar() { return getToken(CricketParser.TChar, 0); }
		public TerminalNode StatementSeparator() { return getToken(CricketParser.StatementSeparator, 0); }
		public List<VartypeContext> vartype() {
			return getRuleContexts(VartypeContext.class);
		}
		public VartypeContext vartype(int i) {
			return getRuleContext(VartypeContext.class,i);
		}
		public List<TerminalNode> Comma() { return getTokens(CricketParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(CricketParser.Comma, i);
		}
		public FuncDeclrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcDeclr; }
	}

	public final FuncDeclrContext funcDeclr() throws RecognitionException {
		FuncDeclrContext _localctx = new FuncDeclrContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_funcDeclr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			((FuncDeclrContext)_localctx).FTYPE = _input.LT(1);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TInt) | (1L << TChar) | (1L << TVoid))) != 0)) ) {
				((FuncDeclrContext)_localctx).FTYPE = (Token)_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(61);
			match(Identifier);
			setState(62);
			match(OpenPar);
			setState(79);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(74);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==TInt || _la==TChar) {
					{
					setState(63);
					vartype();
					setState(64);
					match(Identifier);
					setState(71);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==Comma) {
						{
						{
						setState(65);
						match(Comma);
						setState(66);
						vartype();
						setState(67);
						match(Identifier);
						}
						}
						setState(73);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
				}

				}
				break;
			case 2:
				{
				setState(77);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==TVoid) {
					{
					setState(76);
					match(TVoid);
					}
				}

				}
				break;
			}
			setState(81);
			match(ClosePar);
			setState(82);
			beginBlock();
			setState(83);
			body();
			setState(84);
			endBlock();
			setState(86);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==StatementSeparator) {
				{
				setState(85);
				match(StatementSeparator);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainDeclrHeaderContext extends ParserRuleContext {
		public MainDeclrHeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mainDeclrHeader; }
	 
		public MainDeclrHeaderContext() { }
		public void copyFrom(MainDeclrHeaderContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class MainDeclrHeaderWithRetContext extends MainDeclrHeaderContext {
		public Token FTYPE;
		public TerminalNode OpenPar() { return getToken(CricketParser.OpenPar, 0); }
		public TerminalNode ClosePar() { return getToken(CricketParser.ClosePar, 0); }
		public List<TerminalNode> TVoid() { return getTokens(CricketParser.TVoid); }
		public TerminalNode TVoid(int i) {
			return getToken(CricketParser.TVoid, i);
		}
		public TerminalNode TInt() { return getToken(CricketParser.TInt, 0); }
		public MainDeclrHeaderWithRetContext(MainDeclrHeaderContext ctx) { copyFrom(ctx); }
	}
	public static class MainDeclrHeaderNoRetContext extends MainDeclrHeaderContext {
		public TerminalNode OpenPar() { return getToken(CricketParser.OpenPar, 0); }
		public TerminalNode ClosePar() { return getToken(CricketParser.ClosePar, 0); }
		public TerminalNode TVoid() { return getToken(CricketParser.TVoid, 0); }
		public MainDeclrHeaderNoRetContext(MainDeclrHeaderContext ctx) { copyFrom(ctx); }
	}

	public final MainDeclrHeaderContext mainDeclrHeader() throws RecognitionException {
		MainDeclrHeaderContext _localctx = new MainDeclrHeaderContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_mainDeclrHeader);
		int _la;
		try {
			setState(101);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TInt:
			case TVoid:
				_localctx = new MainDeclrHeaderWithRetContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(88);
				((MainDeclrHeaderWithRetContext)_localctx).FTYPE = _input.LT(1);
				_la = _input.LA(1);
				if ( !(_la==TInt || _la==TVoid) ) {
					((MainDeclrHeaderWithRetContext)_localctx).FTYPE = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(89);
				match(T__0);
				setState(90);
				match(OpenPar);
				setState(92);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==TVoid) {
					{
					setState(91);
					match(TVoid);
					}
				}

				setState(94);
				match(ClosePar);
				}
				break;
			case T__0:
				_localctx = new MainDeclrHeaderNoRetContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(95);
				match(T__0);
				setState(96);
				match(OpenPar);
				setState(98);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==TVoid) {
					{
					setState(97);
					match(TVoid);
					}
				}

				setState(100);
				match(ClosePar);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainDeclrContext extends ParserRuleContext {
		public MainDeclrHeaderContext mainDeclrHeader() {
			return getRuleContext(MainDeclrHeaderContext.class,0);
		}
		public BeginBlockContext beginBlock() {
			return getRuleContext(BeginBlockContext.class,0);
		}
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public EndBlockContext endBlock() {
			return getRuleContext(EndBlockContext.class,0);
		}
		public TerminalNode StatementSeparator() { return getToken(CricketParser.StatementSeparator, 0); }
		public MainDeclrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mainDeclr; }
	}

	public final MainDeclrContext mainDeclr() throws RecognitionException {
		MainDeclrContext _localctx = new MainDeclrContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_mainDeclr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			mainDeclrHeader();
			setState(104);
			beginBlock();
			setState(105);
			body();
			setState(106);
			endBlock();
			setState(108);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==StatementSeparator) {
				{
				setState(107);
				match(StatementSeparator);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BodyContext extends ParserRuleContext {
		public DeclrContext declr() {
			return getRuleContext(DeclrContext.class,0);
		}
		public TerminalNode StatementSeparator() { return getToken(CricketParser.StatementSeparator, 0); }
		public List<BodyContext> body() {
			return getRuleContexts(BodyContext.class);
		}
		public BodyContext body(int i) {
			return getRuleContext(BodyContext.class,i);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public FlowControlContext flowControl() {
			return getRuleContext(FlowControlContext.class,0);
		}
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public WhileStatementContext whileStatement() {
			return getRuleContext(WhileStatementContext.class,0);
		}
		public BeginBlockContext beginBlock() {
			return getRuleContext(BeginBlockContext.class,0);
		}
		public EndBlockContext endBlock() {
			return getRuleContext(EndBlockContext.class,0);
		}
		public BodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_body; }
	}

	public final BodyContext body() throws RecognitionException {
		BodyContext _localctx = new BodyContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_body);
		int _la;
		try {
			setState(137);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TInt:
			case TChar:
				enterOuterAlt(_localctx, 1);
				{
				setState(110);
				declr();
				setState(111);
				match(StatementSeparator);
				setState(112);
				body();
				}
				break;
			case Const:
			case Minus:
			case OpenPar:
			case ExclamationMark:
			case Identifier:
				enterOuterAlt(_localctx, 2);
				{
				setState(114);
				expr();
				setState(115);
				match(StatementSeparator);
				setState(116);
				body();
				}
				break;
			case TReturn:
				enterOuterAlt(_localctx, 3);
				{
				setState(118);
				flowControl();
				setState(119);
				match(StatementSeparator);
				setState(120);
				body();
				}
				break;
			case T__1:
				enterOuterAlt(_localctx, 4);
				{
				setState(122);
				ifStatement();
				setState(123);
				body();
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 5);
				{
				setState(125);
				whileStatement();
				setState(126);
				body();
				}
				break;
			case OpenCurly:
				enterOuterAlt(_localctx, 6);
				{
				setState(128);
				beginBlock();
				setState(129);
				body();
				setState(130);
				endBlock();
				setState(132);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==StatementSeparator) {
					{
					setState(131);
					match(StatementSeparator);
					}
				}

				setState(134);
				body();
				}
				break;
			case CloseCurly:
				enterOuterAlt(_localctx, 7);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public AssignContext assign() {
			return getRuleContext(AssignContext.class,0);
		}
		public PrimaryExprContext primaryExpr() {
			return getRuleContext(PrimaryExprContext.class,0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_expr);
		try {
			setState(141);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(139);
				assign();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(140);
				primaryExpr(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
